--- a/first_app/templates/first_app/base.html
+++ b/first_app/templates/first_app/base.html
@@ -10,22 +10,8 @@
     <link rel="icon" href="{% static 'first_app/img/logo_title.png' %}" type="image/jpg">
 </head>
 <body>
-<div class="box">
-    <div class="container">
-        <form class="form" method="post">
-            <div class="title">REGISTRATION</div>
-            {% csrf_token %}
-            {{form_up.as_p}}
-            <button type="submit" class="btn btn-primary neon">Confirm</button>
-        </form>
-        <form class="form" method="post">
-            <div class="title">LOG IN</div>
-            {% csrf_token %}
-            {{form_in.as_p}}
-            <button type="submit" class="btn btn-primary neon">Confirm</button>
-        </form>
-    </div>
-</div>
+{% block content %}
 
+{% endblock %}
 </body>
 </html>
