--- a/first_app/templates/first_app/home.html
+++ b/first_app/templates/first_app/home.html
@@ -1,24 +1,17 @@
-{% load static %}
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ANIMAL</title>
-    <link rel="stylesheet" href="{% static 'first_app/css/bootstrap.css' %}" type="text/css">
-    <link rel="stylesheet" href="{% static 'first_app/css/fon.css' %}" type="text/css">
-    <link rel="icon" href="{% static 'first_app/img/logo_title.png' %}" type="image/jpg">
-</head>
+{% extends 'first_app/base.html' %}
+
+{% block content %}
 <body>
     <div class="box">
         <div class="container">
-            <form class="form" method="post">
-                <div class="title">add</div>
-                {% csrf_token %}
-                {{form.as_p}}
-                <button type="submit" class="btn btn-primary neon">Confirm</button>
-            </form>
+            <a href="{% url 'logout' %}"><button class="btn btn-primary neon">Log out</button></a>
+            <ul>
+                {% for p in post %}
+                <li>
+                    <h2 class="text">{{p.title}}</h2>
+                </li>
+                {% endfor %}
+            </ul>
         </div>
     </div>
-</body>
-</html>
+{% endblock %}
